# Sovereign-Quantum-Vault

./: CMakeLists.txt  LICENSE  README.md  sovereign_vault
include/: README.md  crypto_interface.hpp  sovereign_engine.h  tensor.h
src/: kernels_scalar.cpp  main.cpp  sovereign_engine.cpp
src/src/: SovereignQuantumVault.cpp
src/src/engine/: avx512_kernels.cpp
